--- a/index.html
+++ b/index.html
@@ -7,33 +7,38 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Sarah Hagen Web Developer</title>
   <link rel="stylesheet" href="./assets/css/style.css" />
+
 </head>
 
 <body>
- 
-  <!-- main logo / nav -->
-   <nav id="navBar">
-    <h1 class="headline">Sarah Hagen </h1> 
-   <div id="navigation">
-    <p> About Me </p>
-    <p> Work </p>
-    <p> Contact Me </p>
-    <p> Resume </p>
-   </div>
-   <div class="icons">
-   <a href="https://www.linkedin.com/in/sarah-hagen-718a2467/">
-    <img src="assets/images/icons8-linkedin-circled-100.png" alt="Linkedin Logo">
-  </a>
-  <a href="https://github.com/Sarahhagen2191">
-    <img src="assets/images/icons8-github-100.png" alt="Github logo">
-  </a> 
-  <a href="https://gitlab.com/Sarahhagen2191">
-    <img src="assets/images/icons8-gitlab-100.png" alt="Gitlab logo">
-  </a> 
- <img src="../Porfolio_01/assets/images/Sarah Photo.jpg" id="Sarahphoto">   
-</div>
 
-</nav>
+  <!-- main logo / nav -->
+  <header >
+    <h1 class="headline">Sarah Hagen </h1>
+    <div class="icons">
+      <a href="https://www.linkedin.com/in/sarah-hagen-718a2467/">
+        <img src="assets/images/icons8-linkedin-circled-100.png" alt="Linkedin Logo">
+      </a>
+      <a href="https://github.com/Sarahhagen2191">
+        <img src="assets/images/icons8-github-100.png" alt="Github logo">
+      </a>
+      <a href="https://gitlab.com/Sarahhagen2191">
+        <img src="assets/images/icons8-gitlab-100.png" alt="Gitlab logo">
+      </a>
+      <img src="../Porfolio_01/assets/images/Sarah Photo.jpg" id="Sarahphoto">
+    </div>
+
+  </header>
+
+  <div class="navContainer">
+
+    <nav>
+      <a href="#aboutme">About Me</a>
+      <a href="#workGrid">Work</a>
+      <a href="#contact">Contact Me</a>
+      <a href="">Resume</a>
+    </nav>
+  </div>
 
 
   <!-- hero banner -->
@@ -45,75 +50,74 @@
       </div>
   </section>
 
-      <!-- about me -->
+  <!-- about me -->
   <main class="page-wrapper">
     <section class="page-section1" id="aboutme">
-      <div id="headline2">
-      <h2>About Me</h2>
+      <div id="subheader" class="subHeading">
+        <h2>About Me</h2>
       </div>
-   <div id="Paragraph">
-      <p>
-  Experienced administrative professional with a demonstrated history of working in the Television, Events and creative industry. 
-  I have a vast amount of experience working within the television industry from my time as a Production Coordinator at Marjan Television Network, MOOV TV and Sky.
-  I have also gained experience of the live broadcasting environment from my time at Mammoth Graphics as an Graphic Design Operator. 
-  I am currently working at BBC News as a Resource Scheduler.
-</p>
-<p>
-  Skilled in Microsoft office, Adobe After Affects, Final Cut Pro, Social Media, and many more. 
-  Strong creative and administrative professional with a Bachelor's degree focused in Business and Film Studies from Kingston University.
-</p>
-</div>
-</section>
+      <div id="Paragraph">
+        <p>
+          Experienced administrative professional with a demonstrated history of working in the Television, Events and
+          creative industry.
+          I have a vast amount of experience working within the television industry from my time as a Production
+          Coordinator at Marjan Television Network, MOOV TV and Sky.
+          I have also gained experience of the live broadcasting environment from my time at Mammoth Graphics as an
+          Graphic Design Operator.
+          I am currently working at BBC News as a Resource Scheduler.
+        </p>
+        <p>
+          Skilled in Microsoft office, Adobe After Affects, Final Cut Pro, Social Media, and many more.
+          Strong creative and administrative professional with a Bachelor's degree focused in Business and Film Studies
+          from Kingston University.
+        </p>
+      </div>
+    </section>
 
-<!-- portfolio container -->
-<section id="workGrid">
-  <div id="subheader" class="subHeading"> 
-    <h2> Work </h2>
-  </div>   
-<div id="furniture" class="projectGridArea">
- <div class="gridheading"> Furniture website </div>
-</div>
+    <!-- portfolio container -->
+    <section id="workGrid">
+      <div id="subheader" class="subHeading1">
+        <h2>Work</h2>
+      </div>
 
-<div id="prework-studyguide" class="projectGridArea">
-  <div class="gridheading">Prework Study Guide</div>
-</div>
+      <a href="https://www.google.com" id="furniture" class="projectGridArea">
+        <div class="gridheading"> Furniture website </div>
+      </a>
 
-<div id="horiseon" class="projectGridArea">
-  <div class="gridheading">Horiseon Website</div>
-</div>
-<div id="Calculator" class="projectGridArea">
-  <div class="gridheading">Calculator </div>
-</div>
+      <a href="https://sarahhagen2191.github.io/prework-study-guide/" id="prework-studyguide" class="projectGridArea">
+      <div class="gridheading">Prework Study Guide</div>
+</a>
+      <a href="https://sarahhagen2191.github.io/challenge_01/" id="horiseon" class="projectGridArea">
+        <div class="gridheading">Horiseon Website</div>
+      </a>
+      <div id="Calculator" class="projectGridArea">
+        <div class="gridheading">Calculator </div>
+      </div>
 
-<div id="Website" class="projectGridArea">
-  <div class="gridheading">Website </div>
-</div>
+      <div id="Website" class="projectGridArea">
+        <div class="gridheading">Website </div>
+      </div>
 
-</section>
-  
+    </section>
 
-<section class="page-section2" id="contact">
-  <div id="headline3">
-  <h2>Contact me</h2>
-  </div>
-<div id="id="paragraph4">
-  <p > Phone number:07775261004 </p>
-  <p> Email address: sarah_hagen@hotmail.co.uk</p>
-</div>
-</section>
+    <section class="page-section2" >
+      <div class="subHeading">
+        <h2>Contact me</h2>
+      </div>
+      <div id="Paragraph">
+        <p>Phone number:07775261004</p>
+        <p>Email address: sarah_hagen@hotmail.co.uk</p>
+      </div>
+    </section>
   </main>
-
-
-
-
 
 
   <footer class="footer">
     <h2 class="footerfont">Made with ❤️️ by Sarah hagen </h2>
     <p>
-        &copy; 2022 Sarah Hagen , Inc.
+      &copy; 2022 Sarah Hagen , Inc.
     </p>
-</footer>
+  </footer>
 
 </body>
 
