--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     </section>
 
     <section class="page-section2" >
-      <div class="subHeading">
+      <div class="subHeading3">
         <h2>Contact me</h2>
       </div>
       <div id="Paragraph">
