update contact link

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     </section>
 
-    <section class="page-section2" >
+    <section id="contact"class="page-section2" >
       <div class="subHeading3">
         <h2>Contact me</h2>
       </div>
