--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <a href="https://gitlab.com/Sarahhagen2191">
         <img src="assets/images/icons8-gitlab-100.png" alt="Gitlab logo">
       </a>
-      <img src="../Porfolio_01/assets/images/sarahphoto.jpg" alt="Sarah Logo" id="Sarahphoto">
+      <img src="assets/images/sarahphoto.jpg" alt="Sarah Logo" id="Sarahphoto">
     </div>
 
   </header>
